UV Editor is slowed down by an open Outliner, when scene is complex, but edited mesh is very simple #115662

Closed
opened 2023-12-01 12:47:02 +01:00 by sanek122005 · 4 comments

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce MX230/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79

Blender Version
Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: d0dd92834a08

Short description of error

the mesh has one slot of material (the simplest), does not participate in any relationships (parent, constraints), does not have modifiers

Exact steps for others to reproduce the error

  1. download file https://disk.yandex.ru/d/fvPInfWcSCAKKQ
  2. Add cube, edit its UV
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce MX230/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 531.79 **Blender Version** Broken: version: 4.0.1, branch: blender-v4.0-release, commit date: 2023-11-16 16:40, hash: `d0dd92834a08` **Short description of error** <video src="/attachments/5cd7d134-e577-4abe-9f9d-131b79152a70" title="2023-12-01 14-21-15.mp4" controls></video> the mesh has one slot of material (the simplest), does not participate in any relationships (parent, constraints), does not have modifiers **Exact steps for others to reproduce the error** 1. download file https://disk.yandex.ru/d/fvPInfWcSCAKKQ 2. Add cube, edit its UV
sanek122005 added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-01 12:47:02 +01:00
Iliya Katushenock added the
Interest
UV Editing
label 2023-12-01 12:55:20 +01:00

Thank you for the report, @sanek122005.

I can confirm.
While we do not usually accept performance issues, in this case, the delay does not really seem to be justified.
I will try to simplify the file to see what is causing it.

Thank you for the report, @sanek122005. I can confirm. While we do not usually accept performance issues, in this case, the delay does not really seem to be justified. I will try to simplify the file to see what is causing it.
Germano Cavalcante added
Module
Modeling
Status
Confirmed
Interest
Performance
and removed
Status
Needs Triage
labels 2023-12-01 18:25:39 +01:00
Author

@mano-wii, unbelievable! absolutely by accident, I found out that the lags were caused by an open outliner! when it is closed, the delay disappears completely. it looks like the problem is the same as #114828

@mano-wii, unbelievable! absolutely by accident, I found out that the lags were caused by an open outliner! when it is closed, the delay disappears completely. it looks like the problem is the same as #114828 <video src="/attachments/d289eade-9d8c-47e0-80b3-69045ba13d5c" title="2023-12-03 17-06-46.mp4" controls></video>
Member

Seems this was mostly done to update the Outliner when renaming bones, see 295bc1249a

Think we could be more specific with notifiers here (use NA_RENAME), but has to be carefully checked (so nothing breaks that "accidentally" relied on this).

Will put on my desk to check.

Seems this was mostly done to update the Outliner when renaming bones, see 295bc1249a85 Think we could be more specific with notifiers here (use `NA_RENAME`), but has to be carefully checked (so nothing breaks that "accidentally" relied on this). Will put on my desk to check.
Philipp Oeser self-assigned this 2023-12-04 10:45:51 +01:00
Philipp Oeser changed title from UV Editor is extreme slow, when scene is complex, but edited mesh is very simple to UV Editor is slowed down by an open Outliner, when scene is complex, but edited mesh is very simple 2023-12-04 11:40:01 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-06 10:24:05 +01:00
Member

I have committed 94defad5f1 to main now.
@sanek122005 : would appreciate if you could check a fresh build from https://builder.blender.org/download/daily/ tomorrow and please report back if issues persist)

I have committed 94defad5f127bc78594732ef64e00d619ecc3212 to main now. @sanek122005 : would appreciate if you could check a fresh build from https://builder.blender.org/download/daily/ tomorrow and please report back if issues persist)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115662
No description provided.