source/blender/editors/armature/armature_naming.cc
@@ -477,8 +477,8 @@ static int armature_flip_names_exec(bContext *C, wmOperator *op)
     DEG_id_tag_update(&ob->id, ID_RECALC_GEOMETRY);
 
     /* copied from #rna_Bone_update_renamed */
-    /* redraw view */
-    WM_event_add_notifier(C, NC_GEOM | ND_DATA, ob->data);
+    /* Redraw Outliner / Dopesheet. */
+    WM_event_add_notifier(C, NC_GEOM | ND_DATA | NA_RENAME, ob->data);
 
     /* update animation channels */
     WM_event_add_notifier(C, NC_ANIMATION | ND_ANIMCHAN, ob->data);
